fix: major cleanup of API routes, fe and be, for better clarity. Also includes some new routes
